# llm-zoomcamp-hw2

./: README.md  homework_2.ipynb  homework_4.ipynb  pyproject.toml
